Building out the layout

--- a/src/scss/partials/_fonts.scss
+++ b/src/scss/partials/_fonts.scss
@@ -1,4 +1,11 @@
-a {
-  color: red;
-  text-decoration-line: none;
+body {
+  font-family: 'Lato', sans-serif;
+}
+
+h1 {
+  color: $header-heading-color;
+}
+
+footer {
+  color: $footer-heading-color;
 }
