--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,2 +1,6 @@
+@import "~bootstrap/scss/bootstrap";
+
+@import "./partials/variables.scss";
 @import "./partials/fonts.scss";
+@import "./partials/layout";
 @import "./partials/main.scss";
