--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -1,3 +1,30 @@
+html, body {
+  height: 100%;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.page-wrapper {
+  background-color: $background-color;
+  flex: 1 0 auto;
+}
+
 body {
-  text-align: center;
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: $header-background-color;
+  min-height: 70px;
+}
+
+main {
+  width: 90%;
+  margin: 0 auto;
 }
