--- a/src/scss/partials/_fonts.scss
+++ b/src/scss/partials/_fonts.scss
@@ -2,10 +2,20 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
-h1 {
-  color: $header-heading-color;
+h3 {
+  margin-top: 50px;
+  margin-bottom: 8px;
 }
 
-footer {
+.navbar-brand {
+  color: $header-heading-color!important;
+  font-size: 32px;
+}
+
+.card-text {
+  margin: 25px 0!important;
+}
+
+footer h5 {
   color: $footer-heading-color;
 }
