--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -13,12 +13,6 @@ html, body {
   flex: 1 0 auto;
 }
 
-body {
-  border: none;
-  margin: 0;
-  padding: 0;
-}
-
 header {
   background-color: $header-background-color;
   min-height: 70px;
@@ -26,5 +20,5 @@ header {
 
 main {
   width: 90%;
-  margin: 0 auto;
+  margin: 120px auto;
 }
